backend/rabbit/manifest/statefulset.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: default
spec:
  selector:
    matchLabels:
      app: rabbitmq # has to match .spec.template.metadata.labels
  serviceName: "rabbitmq"
  replicas: 3 # by default is 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container:  rabbitmq
      labels:
        app: rabbitmq # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: rabbitmq
        image: myapp-slim:1.16.1
        ports:
        - containerPort: 80
          name: rabbitmq
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      storageClassName: my-storage-class
      accessModes:
      - 
      resources:
        requests:
          storage: 1Gi
---
