backend/rabbit/manifest/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: default
spec:
  rules:
    - host: vi2mp3.com
      http:
        paths:
          - path: /
            pathType:
            backend:
              service:
                name: service1
                port:
                  number: 80
---
